--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <title>Best British Budgies</title>
 </head>
 <body>
-<h1> This is a website.</h1>
+<div class = "left-panel">
+  <h1> Best British Budgies </h1>
+  <h3> Kilmarnock- 14 Margaret Parker Avenue: KA1 2NS
+</div>
 </body>
 </html>
