--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
 <head>
 <title>Best British Budgies</title>
+<style>
+  * {box-sizing: border-box;}
+  .left-panel {
+    float: left;
+    width: 50%;
+    background-color: lightblue;
+  }
+    
+</style>
 </head>
 <body>
 <div class = "left-panel">
   <h1> Best British Budgies </h1>
-  <h3> Kilmarnock- 14 Margaret Parker Avenue: KA1 2NS
+  <h3> Kilmarnock- 14 Margaret Parker Avenue: KA1 2NS </h3>
 </div>
 </body>
 </html>
