--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
   .left-panel {
     float: left;
     width: 50%;
+    height: 100%;
     background-color: lightblue;
   }
+ 
+ .left-panel h1, .left-panel h3 {
+    margin: auto;
+    color: green;
+    font-family: "Helvetica";
+ }
     
 </style>
 </head>
