--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Best British Budgies</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
-
+<link rel="stylesheet" href="index.css">
 </head>
 <body>
 
@@ -31,5 +31,6 @@ Nullam tristique malesuada suscipit. Vestibulum at nisi purus. Vestibulum ante i
 </div>
 
 </div>
+ <script src="index.js">
 </body>
 </html>
